# ai-engineering-workspace

./: .env.sample  .gitignore  docker-compose.yaml  main.py  playground.exp.py  playground.py  pyproject.toml
app/: chat.py  main.py
app/agents/: support_agent.py
app/api/: __init__.py  chat.py  dependencies.py
app/api/routers/: chat.py
app/application/chat/: chat_service.py  prompt.py
app/application/conversation/: __init__.py  conversation_service.py
app/application/extraction/: extraction_prompt.py  extraction_service.py
app/core/: config.py  settings.py
app/domain/conversation/: __init__.py  conversation.py  repository.py
app/infrastructure/conversation/: __init__.py  in_memory_repository.py
app/infrastructure/models/: gemini.py
app/llm/: provider.py
app/memory/: history.py
app/prompts/: __init__.py  support_agent.py
app/services/: chat_service.py
app/services/chat_service/: __init__.py  chat_service.py
app/services/support/: search_service.py  tavily_search_service.py  tavity_search_service.py
app/tools/support/: __init__.py  search.py
modules/rag/chunking/: base.py  factory.py  markdown.py  recursive.py  semantic.py  token.py
modules/rag/domain/: knowledge_base.py  source_document.py
modules/rag/loaders/: base.py  factory.py  markdown.py  pdf.py  text.py
