[project]
name = "ai-engineering-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "tavily-python>=0.7.26",
    "uvicorn>=0.51.0",
]
